[package]
name = "servus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-std = { version = "1", features = ["attributes"] }
base64 = { version = "0.22" }
bitcoin_hashes = { version = "0.15", features = ["serde"] }
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
femme = "2"
globset = "0.4"
grass = { version = "0.13", default-features = false, features = ["random"] }
hex = "0.4.3"
http-types = "2"
lazy_static = "1.4"
mime_guess = "2.0"
phf = { version = "0.11", features = ["macros"] }
pulldown-cmark = "0.12"
regex = "1"
reqwest = { version= "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
secp256k1 = { version = "0.27", features = ["global-context", "serde", "bitcoin_hashes", "rand-std"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha256 = "1.5"
tempdir = "0.3.7"
tempfile = "3.15.0"
tera = "1"
tide = "0"
tide-acme = "0"
tide-rustls = "0"
tide-tera = "0"
tide-websockets = "0"
time = "=0.3.39"
tl = "0"
toml = "0"
walkdir = "2"
zip = "2.2.2"

[dev-dependencies]
async-tungstenite = { version = "0.29.1", features = ["async-std-runtime"] }
ctor = "0.4.0"
futures-util = "0.3.31"
nostr = "0.39.0"
surf = "2.3.2"